--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,51 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js build output
 /.next/
 /out/
 
-# production
+# Production build files
 /build
 
-# misc
+# Static files export
+/export
+
+# Miscellaneous
 .DS_Store
 *.pem
 
-# debug
+# Nodejs dependency updates
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Local environment variables
+.env*.local
+.env
 
-# vercel
-.vercel
+# Editor directories and files
+.idea
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.sublime-workspace
 
-# typescript
+# TypeScript cache
 *.tsbuildinfo
-next-env.d.ts
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
